@@ -22,6 +22,7 @@
      without requiring a Spark and Cassandra Cluster, local or remote, to get started.
  * Upgraded Apache Spark to 1.1.0.
  * Upgraded to be Cassandra 2.1.0 and Cassandra 2.0 compatible.
+ * Added spark.cassandra.connection.local_dc option
 
 1.0.0
  * Fix memory leak in PreparedStatementCache leaking PreparedStatements after
